[package]
name = "superconductor_transform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
superconductor = { git = "https://github.com/MeetKai/superconductor" }
bevy_app = "0.7.0"
bevy_ecs = "0.7.0"
bevy_transform = "0.7.0"